feat: add GET /shippers/{id} endpoint
