# swagger/v1/swagger.yaml
@@ -75,6 +75,22 @@ paths:
         '404':
           description: Resource not found
           content: {}
+  "/shippers/{id}":
+    get:
+      summary: Find a shipper by ID
+      tags:
+      - Shippers
+      parameters:
+      - name: shipper_id
+        in: path
+        required: true
+      responses:
+        '200':
+          description: OK
+          content: {}
+        '404':
+          description: Resource not found
+          content: {}
   "/shippers":
     post:
       summary: Store a new shipper
